--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ redcarpet:
 
 # Include all files used by Sphinx documentation
 # Do not specify complete pattern e.g. doc/_static, it won't work.
-include: ["_static", "_modules", "_images", "_sources"]
+include: ["_static", "_modules", "_images", "_sources", ".htaccess"]
