--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Select GitHub markdown, all extensions are needed to get tables work correctly
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
